--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,20 +4,28 @@ version = "0.1.0"
 authors = ["shiki <0110shiki@gmail.com>"]
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-axum = "0.8.4"
 dioxus = { version = "0.6.0", features = ["fullstack"] }
 reqwest = { version = "0.12.18", features = ["json"] }
 serde = { version = "1.0.219", features = ["derive"] }
 
+tokio = { version = "1.0", features = ["full"], optional = true }
+axum = { version = "0.7", optional = true }
+dioxus-cli-config = { version = "0.6", optional = true }
+dioxus-fullstack = "0.6.3"
+
 [features]
 default = []
 web = ["dioxus/web"]
-desktop = ["dioxus/desktop"]
-mobile = ["dioxus/mobile"]
-server = ["dioxus/server"]
+server = [
+    "dioxus/server", 
+    "dep:tokio", 
+    "dep:axum", 
+    "dep:dioxus-cli-config"
+]
+
+[workspace]
+resolver = "2"
 
 [profile]
 
