--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,20 +5,22 @@ authors = ["shiki <0110shiki@gmail.com>"]
 edition = "2021"
 
 [dependencies]
-dioxus = { version = "0.6.0", features = ["fullstack"] }
+dioxus = { version = "0.6.0", features = ["fullstack", "router"] }
 reqwest = { version = "0.12.18", features = ["json"] }
 serde = { version = "1.0.219", features = ["derive"] }
-
+rusqlite = { version = "0.29.0", features = ["bundled"], optional = true }
 tokio = { version = "1.0", features = ["full"], optional = true }
 axum = { version = "0.7", optional = true }
 dioxus-cli-config = { version = "0.6", optional = true }
 dioxus-fullstack = "0.6.3"
+create = "0.1.0"
 
 [features]
 default = []
 web = ["dioxus/web"]
 server = [
     "dioxus/server", 
+    "dep:rusqlite",
     "dep:tokio", 
     "dep:axum", 
     "dep:dioxus-cli-config"
